fix: adjust line spacing

--- a/src/components/waffle.css
+++ b/src/components/waffle.css
@@ -9,7 +9,7 @@
   background-color: black;
   width: 2px;
   align-self: stretch;
-  margin: 0 2rem 0 1rem;
+  margin: 0 1rem;
 }
 
 .hundred {
